Scroll the nav if it get's too big, fixes #121

--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -91,6 +91,8 @@ nav {
       $border-size: 1px;
       border-bottom: 0.5em solid palette(accent, bg);
 
+      overflow-x: auto;
+
       .socials {
         div {
           text-align: right;
